ajout d'éléments en html css commencé

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-
+		<h1>ToDoSwitch</h1>
+		<input type="text" id="ajoutinp" placeholder="ajouter une tâches"><button id="ajouter">Ajouter</button>
+		<ul class="liste">
+			<li class="element">laver voiture</li><span class="cocher">x</span>
+			<li class="element valide">laver le chien</li><span class="cocher">x</span>
+			<li class="element">changer le pot d'échapement</li><span class="cocher">x</span>
+			<li class="element">faire une carte de gratuité des transport</li><span class="cocher">x</span>
+			<li class="element">aller voir mamie</li><span class="cocher">x</span>
+		</ul>
+		<button>tâches faites</button>
+		<button>tâches à faire</button>
+		<button>toutes</button>
 		<script src="js/app.js"></script>
 	</body>
 </html>
