--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<button>tâches faites</button>
 		<button>tâches à faire</button>
 		<button>toutes</button>
-		<script src="js/app.js"></script>
+		<p></p>
 	</body>
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+		<script src="js/app.js"></script>
 </html>
