--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 		<h1>ToDoSwitch</h1>
 		<input type="text" id="ajoutinp" placeholder="ajouter une tâches"><button id="ajouter">Ajouter</button>
 		<ul class="liste">
-			<li class="element">laver voiture</li><span class="cocher">x</span>
-			<li class="element valide">laver le chien</li><span class="cocher">x</span>
-			<li class="element">changer le pot d'échapement</li><span class="cocher">x</span>
-			<li class="element">faire une carte de gratuité des transport</li><span class="cocher">x</span>
-			<li class="element">aller voir mamie</li><span class="cocher">x</span>
 		</ul>
-		<button>tâches faites</button>
-		<button>tâches à faire</button>
-		<button>toutes</button>
+		<button id="done">tâches faites</button>
+		<button id="todo">tâches à faire</button>
+		<button id="all">toutes</button>
 		<p></p>
 	</body>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
